	- XM: fix setting toneporta target with an active invalid instrument.
	- XM: implement FT2-style offset effect memory (QUIRK_FT2BUGS only).
	- Sum toneporta rates when toneporta is present in both effects slots
	  in an event; FT2 bug emulation for double toneporta now zeroes the
	  parameter of 3xx in the player instead of using a loader hack. This
	  doesn't affect Ultra Tracker toneporta.
	- XMF: toneporta is identical to Ultra Tracker toneporta (slightly
	  affects max.xmf pos 13+, but the notes are out-of-tune either way).
	- Fix time tracking bugs in some complex pattern loop cases.
	- Fix time tracking bugs when Bxx+Dxx jumps within the same position.
	- Dxx (S3M/IT: Cxx) followed by Byy on the same row now jumps to pos Y
	  row X for S3M, IT, ModPlug XM, and Skale Tracker XM modules.
	- IT: fix importing channel initial panning for muted channels.
	- IT: fix playing instruments with samples >=120 in the key map.
	- MTM: fix pattern break hex parameter.
	- PTM: actually fix pattern break hex parameter.
	- STM: always use 0 for pattern break parameter (ST2 ignores it).
	- STM: import ST2 tempo values as both speed and BPM.
	- GDM: don't zero channel volume for muted channels.
	- Fix xmp_start_player not unmuting non-muted channels (regression
	  introduced in 4.5.0).
	Changes by Alice Rowan and ds-sloth:
	- Minor Impulse Tracker loader performance improvements.

4.6.3 (20250511):
	Changes by Alice Rowan:
	- Fix crashes when xmp_set_position is used to set a negative position.
	  Negative positions now correctly return -XMP_ERROR_INVALID.
	- Fix crashes when xmp_set_row is used to set a negative row.
	  Negative positions now correctly return -XMP_ERROR_INVALID.
	- Fix hangs when xmp_prev_position is used on the first position of
	  a sequence which is preceded by an S3M/IT skip marker.
	- Fix out-of-bounds reads when xmp_next_position is used at the end of
	  a 256 position module.
	- Fix hangs when seeking to an end-of-module marker caused by these